--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-react": "^6.6.0",
     "mobx": "^2.6.3",
+    "mobx-react": "^3.5.9",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-router": "^3.0.0",
     "webpack": "^1.13.3",
     "whatwg-fetch": "^1.0.0"
   }
