--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "dev": "sass --watch ./sass:./dist/css & webpack --watch & ./manage.py runserver",
-    "sass": "sass --watch ./sass:./dist/css",
+    "dev": "sass --watch ./scss/styles.scss:./dist/css/styles.css & webpack --watch & ./manage.py runserver",
+    "sass": "sass --watch ./scss:./dist/css",
     "webpack": "webpack --watch"
   },
   "author": "Caz",
